findbugs: inefficient use of Number constructor, use .valueOf