@@ -53,7 +53,7 @@ public class PoolCuratorAccessControlTest extends DatabaseTestFixture {
 
     @Test
     public void shouldReturnPoolsBelongingToTheOwnerWhenFilterIsEnabled() {
-        Pool pool = createPoolAndSub(owner, product, new Long(100),
+        Pool pool = createPoolAndSub(owner, product, 100L,
             TestUtil.createDate(2050, 3, 2), TestUtil.createDate(2055, 3, 2));
         poolCurator.create(pool);
         
@@ -74,7 +74,7 @@ public class PoolCuratorAccessControlTest extends DatabaseTestFixture {
     
     @Test
     public void shouldReturnPoolsBelongingToConsumersOwnerWhenFilterIsEnabled() {
-        Pool pool = createPoolAndSub(owner, product, new Long(100),
+        Pool pool = createPoolAndSub(owner, product, 100L,
             TestUtil.createDate(2050, 3, 2), TestUtil.createDate(2055, 3, 2));
         poolCurator.create(pool);
         
@@ -139,10 +139,10 @@ public class PoolCuratorAccessControlTest extends DatabaseTestFixture {
     
     @Test(expected = ForbiddenException.class)
     public void ownerAdminCannotDeleteAnotherOwnersPools() {
-        Pool pool = createPoolAndSub(owner, product, new Long(100),
+        Pool pool = createPoolAndSub(owner, product, 100L,
             TestUtil.createDate(2050, 3, 2), TestUtil.createDate(2055, 3, 2));
         poolCurator.create(pool);
-        Pool pool2 = createPoolAndSub(owner, product, new Long(100),
+        Pool pool2 = createPoolAndSub(owner, product, 100L,
             TestUtil.createDate(2050, 3, 2), TestUtil.createDate(2055, 3, 2));
         poolCurator.create(pool2);
         
@@ -159,10 +159,10 @@ public class PoolCuratorAccessControlTest extends DatabaseTestFixture {
     
     @Test
     public void ownerAdminCanDeletePools() {
-        Pool pool = createPoolAndSub(owner, product, new Long(100),
+        Pool pool = createPoolAndSub(owner, product, 100L,
             TestUtil.createDate(2050, 3, 2), TestUtil.createDate(2055, 3, 2));
         poolCurator.create(pool);
-        Pool pool2 = createPoolAndSub(owner, product, new Long(100),
+        Pool pool2 = createPoolAndSub(owner, product, 100L,
             TestUtil.createDate(2050, 3, 2), TestUtil.createDate(2055, 3, 2));
         poolCurator.create(pool2);
         
@@ -177,7 +177,7 @@ public class PoolCuratorAccessControlTest extends DatabaseTestFixture {
     
     @Test(expected = ForbiddenException.class)
     public void ownerAdminCannotUpdateAnotherOwnersPools() {
-        Pool pool = createPoolAndSub(owner, product, new Long(100),
+        Pool pool = createPoolAndSub(owner, product, 100L,
             TestUtil.createDate(2050, 3, 2), TestUtil.createDate(2055, 3, 2));
         poolCurator.create(pool);
 
@@ -195,7 +195,7 @@ public class PoolCuratorAccessControlTest extends DatabaseTestFixture {
 
     @Test
     public void ownerAdminCanUpdatePools() {
-        Pool pool = createPoolAndSub(owner, product, new Long(100),
+        Pool pool = createPoolAndSub(owner, product, 100L,
             TestUtil.createDate(2050, 3, 2), TestUtil.createDate(2055, 3, 2));
         poolCurator.create(pool);
         
@@ -208,7 +208,7 @@ public class PoolCuratorAccessControlTest extends DatabaseTestFixture {
         poolCurator.merge(pool);
         
         Pool retirevedPool = poolCurator.find(pool.getId());
-        assertEquals(new Long(10), retirevedPool.getConsumed());
+        assertEquals(Long.valueOf(10), retirevedPool.getConsumed());
     }
     
     @Test(expected = ForbiddenException.class)
@@ -217,7 +217,7 @@ public class PoolCuratorAccessControlTest extends DatabaseTestFixture {
         setupPrincipal(owner2, Role.OWNER_ADMIN);
         crudInterceptor.enable();
 
-        createPoolAndSub(owner, product, new Long(100),
+        createPoolAndSub(owner, product, 100L,
             TestUtil.createDate(2050, 3, 2), TestUtil.createDate(2055, 3, 2));
     }
     
@@ -226,7 +226,7 @@ public class PoolCuratorAccessControlTest extends DatabaseTestFixture {
         setupPrincipal(owner, Role.OWNER_ADMIN);
         crudInterceptor.enable();
         
-        createPoolAndSub(owner, product, new Long(100),
+        createPoolAndSub(owner, product, 100L,
             TestUtil.createDate(2050, 3, 2), TestUtil.createDate(2055, 3, 2));
         
         assertEquals(1, poolCurator.listAll().size());
@@ -234,7 +234,7 @@ public class PoolCuratorAccessControlTest extends DatabaseTestFixture {
     
     @Test
     public void consumerCanSeePoolsOfItsOwner() {
-        createPoolAndSub(owner, product, new Long(100),
+        createPoolAndSub(owner, product, 100L,
             TestUtil.createDate(2009, 3, 2), TestUtil.createDate(2055, 3, 2));
         
         setupPrincipal(new ConsumerPrincipal(consumer));
@@ -247,7 +247,7 @@ public class PoolCuratorAccessControlTest extends DatabaseTestFixture {
     
     @Test
     public void consumerCannotSeePoolsOfOtherOwners() {
-        createPoolAndSub(owner, product, new Long(100),
+        createPoolAndSub(owner, product, 100L,
             TestUtil.createDate(2009, 3, 2), TestUtil.createDate(2055, 3, 2));
         
         setupPrincipal(new ConsumerPrincipal(createConsumer(createOwner())));
@@ -260,7 +260,7 @@ public class PoolCuratorAccessControlTest extends DatabaseTestFixture {
     
     @Test
     public void ownerCanSeeOwnPools() {
-        createPoolAndSub(owner, product, new Long(100),
+        createPoolAndSub(owner, product, 100L,
             TestUtil.createDate(2009, 3, 2), TestUtil.createDate(2055, 3, 2));
         
         setupPrincipal(owner, Role.OWNER_ADMIN);
@@ -273,7 +273,7 @@ public class PoolCuratorAccessControlTest extends DatabaseTestFixture {
     
     @Test
     public void ownerCannotSeeOtherOwnersPools() {
-        createPoolAndSub(owner, product, new Long(100),
+        createPoolAndSub(owner, product, 100L,
             TestUtil.createDate(2009, 3, 2), TestUtil.createDate(2055, 3, 2));
         
         setupPrincipal(createOwner(), Role.OWNER_ADMIN);
