@@ -137,13 +137,13 @@ public class ConsumerResourceTest extends DatabaseTestFixture {
         product = TestUtil.createProduct();
         productCurator.create(product);
 
-        pool = createPoolAndSub(owner, product, new Long(10), TestDateUtil
+        pool = createPoolAndSub(owner, product, 10L, TestDateUtil
             .date(2010, 1, 1), TestDateUtil.date(2020, 12, 31));
         poolCurator.create(pool);
 
-        fullPool = createPoolAndSub(owner, product, new Long(10), TestDateUtil
+        fullPool = createPoolAndSub(owner, product, 10L, TestDateUtil
             .date(2010, 1, 1), TestDateUtil.date(2020, 12, 31));
-        fullPool.setConsumed(new Long(10));
+        fullPool.setConsumed(10L);
         poolCurator.create(fullPool);
         eventFactory = injector.getInstance(EventFactory.class);
 
@@ -300,7 +300,7 @@ public class ConsumerResourceTest extends DatabaseTestFixture {
         assertEquals(1, consumer.getEntitlements().size());
 
         pool = poolCurator.find(pool.getId());
-        assertEquals(new Long(1), pool.getConsumed());
+        assertEquals(Long.valueOf(1), pool.getConsumed());
         assertEquals(1, resultList.size());
         assertEquals(pool.getId(), resultList.get(0).getPool().getId());
         assertEquals(1, entCertCurator.listForEntitlement(resultList.get(0))
