@@ -157,7 +157,7 @@ public class TestUtil {
     public static Pool createPool(Owner owner, String productId,
         Set<ProvidedProduct> providedProducts, int quantity) {
 
-        Pool pool = new Pool(owner, productId, providedProducts, new Long(quantity),
+        Pool pool = new Pool(owner, productId, providedProducts, Long.valueOf(quantity),
             TestUtil.createDate(2009, 11, 30), TestUtil.createDate(2015, 11, 30),
             "SUB234598S", "ACC123");
         return pool;
